# claude-statusline

./: Cargo.toml  README.md  install.sh
src/: debug.rs  lib.rs  main.rs  status.rs  token.rs  transcript.rs
src/models/: mod.rs  status.rs  transcript.rs
